background dark mode issue

--- a/src/app/styles/homePage.module.css
+++ b/src/app/styles/homePage.module.css
@@ -105,22 +105,33 @@
   border: 1px solid #4c4639;
   width: 100%;
   border-radius: 20px;
+  border: 1px solid #e4c36b;
 }
 .missionCardTitle {
   margin-top: 20px;
   margin-bottom: 30px;
   text-align: center;
+  color: #f7f4f0;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: var(--Title-Large-Size, 22px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: var(--Title-Large-Line-Height, 28px); /* 127.273% */
+  letter-spacing: var(--Title-Large-Tracking, 0px);
 }
 .missionCardDesc {
   max-width: 249px;
   width: 1000%;
-  text-align: center;
-  font-family: Open Sans;
   font-size: 14px;
+  text-align: center;
+  color: #f7f4f0;
+  text-align: center;
+  font-family: "Open Sans";
+  font-style: normal;
   font-weight: 400;
   line-height: 20px;
-  letter-spacing: 0.10000000149011612px;
-  text-align: center;
+  letter-spacing: 0.25px;
 }
 .reviewHeading {
   font-family: Oswald;
@@ -138,6 +149,7 @@
   border-radius: 54px;
   padding: 30px 15px 30px 15px;
   gap: 20px;
+  border: 1px solid #e4c36b;
 }
 .reviewCardQuote {
   font-family: Inter;
@@ -148,12 +160,13 @@
   color: #ffffff;
 }
 .reviewCardDesc {
-  font-family: Open Sans;
-  font-size: 16px;
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 14px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.10000000149011612px;
-  text-align: left;
+  line-height: 20px; /* 142.857% */
+  letter-spacing: 0.25px;
   margin-bottom: 10px;
 }
 .reviewCardName {
